--- a/.github/workflows/learning_cicd.yml
+++ b/.github/workflows/learning_cicd.yml
@@ -8,6 +8,6 @@ jobs:
         - users: action/checkout@v3
         - users: aciton/setup-node@v3
           with:
-            node-version: '14'
+            node-version: 14
             - run: npm install -g bats
             - run: bats -v
