--- a/.github/workflows/learning_cicd.yml
+++ b/.github/workflows/learning_cicd.yml
@@ -1,9 +1,9 @@
 name : learn_workflow
 run-name: $(github.actor) is learning from Github Acitons
-on: (push)
+on: [push]
 jobs:
     check-bats-version:
-       runs-on: ubuntu-lastest
+       runs-on: ubuntu-latest
        steps:
         - users: action/checkout@v3
         - users: aciton/setup-node@v3
