--- a/.github/workflows/learning_cicd.yml
+++ b/.github/workflows/learning_cicd.yml
@@ -5,8 +5,8 @@ jobs:
     check-bats-version:
        runs-on: ubuntu-latest
        steps:
-        - uses: action/checkout@v3
-        - uses: aciton/setup-node@v3
+        - uses: actions/checkout@v3
+        - uses: acitons/setup-node@v3
           with:
             node-version: 14
         - run: npm install -g bats
